frame/support/test/tests/pallet_ui/step_015.stderr
error: Invalid generics: expect `impl<T: Trait>` or `impl<T: Trait<I>, I: Instance>`
  --> $DIR/step_015.rs:11:2
   |
11 |     impl<T> path::ModuleInterface for Module<T> {}
   |     ^^^^

error: expected `:`
 --> $DIR/step_015.rs:1:1
  |
1 | #[frame_support::pallet(Example)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
